# leanforge

./: .gitignore  README.rst  pyproject.toml  test.html
leanforge/: manage.py
leanforge/lean_canvas/: admin.py  apps.py  urls.py
leanforge/lean_canvas/forms/: __init__.py  channel.py  cost_structure.py
leanforge/lean_canvas/migrations/: 0001_initial.py
leanforge/lean_canvas/models/: __init__.py  channel.py  cost_structure.py  customer_segment.py  key_metric.py  lean_canvas.py  problem.py  revenue_stream.py  solution.py  unfair_advantage.py  unique_value_proposition.py
leanforge/lean_canvas/templates/: base.html
leanforge/lean_canvas/templates/lean_canvas/: lean_canvas_detail.html  lean_canvas_list.html
leanforge/lean_canvas/templates/partials/: channel_create.html  channel_list.html
leanforge/lean_canvas/templates/partials/channels/: channel_create.html  channel_form.html  channel_list.html
leanforge/lean_canvas/templates/partials/cost_structures/: cost_structure_create.html  cost_structure_form.html  cost_structure_list.html  cost_structure_partial.html
leanforge/lean_canvas/views/: __init__.py  channel.py  cost_structure.py  lean_canvas.py
leanforge/leanforge/: asgi.py  settings.py  urls.py  wsgi.py
