[tool.poetry]
name = "leanforge"
version = "0.1.0"
description = "LeanForge is a Django package that helps businesses create and refine Lean Canvas Business Plans. With LeanForge, you can easily shape and mold your business strategies using lean methodology principles. It provides a comprehensive set of tools, models, and templates to seamlessly integrate Lean Canvas functionality into your Django projects. Simplify your business planning process, drive continuous improvement, and forge a path to success with LeanForge."
authors = ["Ali Tavallaie <a.tavallaie@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
Django = "^4.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
